# FFmpeg

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
.github/workflows/: build.yml  release.yml  test.yml
android/: build.sh  ffmpeg.cmake
tools/: build.sh  changelog.sh  common.sh  download.sh  latest.sh  libvers.sh  sums.sh  vars.sh
unix/: build.sh  ffmpeg.cmake  linux-deps.sh  macos-deps.sh  software.cmake
windows/: build.sh  deps.sh  ffmpeg.cmake  prepare.sh  software.cmake
